--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -14,13 +14,15 @@ Orange color: #e67e22
     box-sizing: border-box;
 }
 
-html {
+html,
+body {
     background-color: #fff;
     color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
 
@@ -308,6 +310,7 @@ header {
     padding-left: 3%;
     margin-top: 70px;
 }
+
 .app-screen {
     width: 40%;
 }
@@ -462,12 +465,12 @@ cite img {
 /*-------------------------------------------*/
 
 .contact-form {
-    width 60%;
+    width: 60%;
     margin: 0 auto;
 }
 
 input[type=text],
-input[type=email].
+input[type=email],
 select,
 textarea {
     width: 100%;
