--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -218,6 +218,15 @@ header {
     margin-top: 20px;
 }
 
+.logo-black { 
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
+
+/* Main navi */
 .main-nav {
     float: right;
     list-style: none;
@@ -246,6 +255,27 @@ header {
     border-bottom: 2px solid #e67e22;
 
 }
+
+/* Sticky navi */
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+}
+
+.main-nav { margin-top: 18px; }
+
+.sticky .main-nav li a:link, 
+.sticky .main-nav li a:visited {
+    color: #555;
+    padding: 16px 0;
+}
+
+.sticky .logo { display: none; }
+.sticky .logo-black {display: block;}
 
 /*-------------------------------------------*/
 /* FEATURES */
